add global error handler and add openAPI detail
